--- a/media_queries.css
+++ b/media_queries.css
@@ -1,5 +1,47 @@
 @media only screen and (min-width: 320px) {
     #header {
-        background-color: red;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        position: fixed;
+        justify-content: space-between;
+        align-items: center;
     }
+
+    #header-img {
+        width: 300px;
+        height: 150px;
+        margin: 0;
+    }
+
+    #nav-bar {
+        display: flex;
+        width: 100%;
+        justify-content: space-around;
+    }
+
+    ul {
+        list-style: none;
+        display: block;
+        margin: 0 auto;
+        padding-left: 0;      
+    }
+
+    #services, #new-games {
+        margin: 15% 10% 10% 10%;
+    }
+
+    fieldset {
+        margin: 15% 10% 10% 10%;
+    }
+        
+    #form {
+        margin: 15%;
+    }
+    
+    #email {
+        width: 70%;
+    }
+
+
 }
