--- a/media_queries.css
+++ b/media_queries.css
@@ -1,11 +1,14 @@
 @media only screen and (min-width: 320px) {
     #header {
+        background-color: white;
         width: 100%;
+        height: auto;
         display: flex;
         flex-direction: column;
         position: fixed;
         justify-content: space-between;
         align-items: center;
+        margin-top: -10%;
     }
 
     #header-img {
@@ -27,8 +30,8 @@
         padding-left: 0;      
     }
 
-    #services, #new-games {
-        margin: 15% 10% 10% 10%;
+    #services, #new-games, #pricing {
+        margin: 50% 10% 50% 10%;
     }
 
     fieldset {
