--- a/styles.css
+++ b/styles.css
@@ -38,14 +38,14 @@ h2 {
 }
 
 #services {
-	background: linear-gradient(rgba(255,255,255,.6), rgba(255,255,255,.6)), url('https://orig00.deviantart.net/86db/f/2015/250/6/f/triumphordiehiresv_by_deffectx-d98s7xb.jpg');
+	background: linear-gradient(rgba(255,255,255,.6), rgba(255,255,255,.6)), url('./images/services.jpg');
 	background-size: 100% 100%;
 	background-repeat: no-repeat;
 	padding: 5%;
 }
 
 #new-games {
-	background: linear-gradient(rgba(255,255,255,.6), rgba(255,255,255,.6)), url('http://extras.mnginteractive.com/live/media/site21/2018/0801/20180801__03DCFGAM~1.jpg');
+	background: linear-gradient(rgba(255,255,255,.6), rgba(255,255,255,.6)), url('./images/new-games.jpg');
 	background-size: 100% 100%;
 	background-repeat: no-repeat;
 	padding: 5%;	
