--- a/media_queries.css
+++ b/media_queries.css
@@ -9,6 +9,7 @@
         justify-content: space-between;
         align-items: center;
         margin-top: -10%;
+        z-index: 2;
     }
 
     #header-img {
