--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,10 @@ html, body {
     overflow-x: hidden;
 }
 
+form {
+	display: flex;
+}
+
 .active {
     background-color: #d3d3d3b8;
     -webkit-box-shadow: 0 1px 5px rgba(0, 0, 0, 0.25);
@@ -28,7 +32,7 @@ a:hover {
 }
 
 h2 {
-    color: dimgray;
+    color: black;
     border-bottom: solid 2px red;
     padding-bottom: 5px;
     width: 150px;
@@ -51,11 +55,20 @@ h2 {
 	padding: 5%;	
 }
 
-#pricing {
-	background: linear-gradient(rgba(255,255,255,.6), rgba(255,255,255,.6)), url('http://images5.fanpop.com/image/photos/27900000/Kingdom-Hearts-kingdom-hearts-27963321-340-463.png');
+.monthly {
+	background: linear-gradient(rgba(255,255,255,.6), rgba(255,255,255,.6)), url('http://lbc9.net/games/first-person-shooter-games/battlefield-bad-company-2/fps-battlefield-bad-company-2-1920x1080.jpg');
 	background-size: 100% 100%;
 	background-repeat: no-repeat;
-	padding: 5%;	
+	padding: 5%;
+	opacity: 0.7;
+}
+
+.yearly {
+	background: linear-gradient(rgba(255,255,255,.6), rgba(255,255,255,.6)), url('https://images2.alphacoders.com/401/thumb-1920-40102.jpg');
+	background-size: 100% 100%;
+	background-repeat: no-repeat;
+	padding: 5%;
+	opacity: 0.7;	
 }
 
 fieldset {
