--- a/media_queries.css
+++ b/media_queries.css
@@ -37,6 +37,10 @@
         height: 50px;
     }
 
+    main {
+    	padding-top: 50%;
+    }
+
     ul {
         list-style: none;
         display: block;
@@ -44,12 +48,16 @@
         padding-left: 0;      
     }
 
-    #services, #new-games, #pricing {
-        margin: 40% 0 40% 0;
+    #services {
+        margin: 10% 0 40% 0; 
+    }
+
+    #new-games, #pricing {
+        margin: 10% 0 40% 0;
     }
 
     fieldset {
-        margin: 15% 10% 10% 10%;
+        margin: 10% 10% 5% 10%;
     }
         
     #form {
@@ -84,8 +92,12 @@
         height: 1px;
     }
 
+    main {
+    	padding-top: 30%;
+    }
+
     #services, #new-games, #pricing {
-        margin: 25% 0 25% 0;
+        margin: 2% 0 25% 0;
     }
 
 }
@@ -96,7 +108,11 @@
         padding-bottom: 3%;
     }
 
+    main {
+    	padding-top: 30%;
+    }
+
     #services, #new-games, #pricing {
-        margin: 15% 0 15% 0;
+        margin: 2% 0 25% 0;
     }
 }
