--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,17 @@
 html, body {
     max-width: 100%;
     font-family: 'Ubuntu', sans-serif;
-    overflow-x: hidden;
+	overflow-x: hidden;
+	margin: 0;
+}
+
+main {
+	background-image: url('https://freedesignfile.com/upload/2017/01/Gray-futuristic-tech-background-vector-01.jpg');
+	background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+	background-size: cover;
+	height: 100%;
 }
 
 form {
@@ -56,19 +66,17 @@ h2 {
 }
 
 .monthly {
-	background: linear-gradient(rgba(255,255,255,.6), rgba(255,255,255,.6)), url('http://lbc9.net/games/first-person-shooter-games/battlefield-bad-company-2/fps-battlefield-bad-company-2-1920x1080.jpg');
+	background: linear-gradient(rgba(255,255,255,.6), rgba(255,255,255,.4)), url('http://lbc9.net/games/first-person-shooter-games/battlefield-bad-company-2/fps-battlefield-bad-company-2-1920x1080.jpg');
 	background-size: 100% 100%;
 	background-repeat: no-repeat;
-	padding: 5%;
-	opacity: 0.7;
+	opacity: 1;
 }
 
 .yearly {
-	background: linear-gradient(rgba(255,255,255,.6), rgba(255,255,255,.6)), url('https://images2.alphacoders.com/401/thumb-1920-40102.jpg');
+	background: linear-gradient(rgba(255,255,255,.6), rgba(255,255,255,.4)), url('https://images2.alphacoders.com/401/thumb-1920-40102.jpg');
 	background-size: 100% 100%;
 	background-repeat: no-repeat;
-	padding: 5%;
-	opacity: 0.7;	
+	opacity: 1;	
 }
 
 fieldset {
