--- a/media_queries.css
+++ b/media_queries.css
@@ -81,7 +81,7 @@
 
 @media only screen and (min-width: 500px) and (max-width: 767px) {
     #header-img {
-        margin-top: 10%;
+        margin-top: 3%;
     }
 }
 
@@ -94,12 +94,12 @@
 
     #nav-container {
         margin-top: 7%;
-        height: 110px;
+        height: 55px;
     }
 
     #header-img {
         width: 400px;
-        height: 200px;
+        height: 150px;
         margin-top: 5%;
     }
 
@@ -137,9 +137,18 @@
 }
 
 @media only screen and (min-width: 1024px) {
+    #header {
+        padding-top: 2.5%;
+    }
+
+    #header-img {
+        max-height: 130px;
+    }
+
     #nav-container {
-        padding-top: 3%;        
+        padding-top: 3%;
         padding-bottom: 3%;
+        height: 20px;
     }
 
     main {
@@ -155,7 +164,9 @@
     }
 
     #services, #new-games, #pricing {
-        margin: 2% 0 20% 0;
+        width: 70%;
+        margin: 0 auto;
+        margin-bottom: 15%;
     }
 
     #form {
