--- a/styles.css
+++ b/styles.css
@@ -52,7 +52,7 @@ h2 {
 }
 
 #services {
-	background: linear-gradient(rgba(255,255,255,.6), rgba(255,255,255,.6)), url('./images/services.jpg');
+	background: linear-gradient(rgba(255,255,255,.6), rgba(255,255,255,.6)), url('https://wallup.net/wp-content/uploads/2016/05/24/330423-Street_Fighter_V-artwork-video_games-748x421.jpg');
 	background-size: 100% 100%;
 	background-repeat: no-repeat;
 	padding: 5%;
