--- a/styles.css
+++ b/styles.css
@@ -128,6 +128,11 @@ button {
     font-size: large;
 }
 
+button:hover {
+	cursor: pointer;
+	background-color: darkred;
+}
+
 .submit {
 	border: none;
 	padding: 5px;
@@ -135,4 +140,9 @@ button {
 	background-color: crimson;
     color: aliceblue;
     font-size: large;	
+}
+
+.submit:hover {
+	cursor: pointer;
+	background-color: darkred;
 }
